5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1721_3062.log
== SUBMITION (2019-05-02 18:53:39) 
-- CODE:
PO = int(input("quantidade de pecas de ouro : "))
arma = int(input("nome da arma : "))
sucesso = int(input("fator de sucesso : "))
if(PO >= 100 and arma == "ESPADA"):
	dano = d*10
	print(dano)
elif(PO >= 30 and arma == "MACHADO"):
	dano = d+3
	print(dano)
elif(PO >= 50 and arma == "MARRETA"):
	dano = d+5
	print(dano)
else:
	print("PO insuficiente")
	
	
	
	
-- EXECUTION TIME:
0.157299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1721/3062/main.py", line 2, in <module>
    arma = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:39) 
-- CODE:
PO = int(input("quantidade de pecas de ouro : "))
arma = int(input("nome da arma : "))
sucesso = int(input("fator de sucesso : "))
if(PO >= 100 and arma == "ESPADA"):
	dano = d*10
	print(dano)
elif(PO >= 30 and arma == "MACHADO"):
	dano = d+3
	print(dano)
elif(PO >= 50 and arma == "MARRETA"):
	dano = d+5
	print(dano)
else:
	print("PO insuficiente")
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    arma = int(input())
ValueError: invalid literal for int() with base 10: 'ESPADA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:17) 
-- CODE:
PO = int(input("quantidade de pecas de ouro : "))
arma = input("nome da arma : ")
sucesso = int(input("fator de sucesso : "))
if(PO >= 100 and arma == "ESPADA"):
	dano = d*10
	print(dano)
elif(PO >= 30 and arma == "MACHADO"):
	dano = d+3
	print(dano)
elif(PO >= 50 and arma == "MARRETA"):
	dano = d+5
	print(dano)
else:
	print("PO insuficiente")
	
	
	
	
-- EXECUTION TIME:
0.221337
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1721/3062/main.py", line 5, in <module>
    dano = d*10
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:17) 
-- CODE:
PO = int(input("quantidade de pecas de ouro : "))
arma = input("nome da arma : ")
sucesso = int(input("fator de sucesso : "))
if(PO >= 100 and arma == "ESPADA"):
	dano = d*10
	print(dano)
elif(PO >= 30 and arma == "MACHADO"):
	dano = d+3
	print(dano)
elif(PO >= 50 and arma == "MARRETA"):
	dano = d+5
	print(dano)
else:
	print("PO insuficiente")
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano = d*10
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:57) 
-- CODE:
PO = int(input("quantidade de pecas de ouro : "))
arma = input("nome da arma : ")
sucesso = int(input("fator de sucesso : "))
if(PO >= 100 and arma == "ESPADA"):
	dano = sucesso*10
	print(dano)
elif(PO >= 30 and arma == "MACHADO"):
	dano = sucesso+3
	print(dano)
elif(PO >= 50 and arma == "MARRETA"):
	dano = sucesso+5
	print(dano)
else:
	print("PO insuficiente")
	
	
	
	
-- EXECUTION TIME:
0.212569
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:54:59) 
-- CODE:
PO = int(input("quantidade de pecas de ouro : "))
arma = input("nome da arma : ")
sucesso = int(input("fator de sucesso : "))
if(PO >= 100 and arma == "ESPADA"):
	dano = sucesso*10
	print(dano)
elif(PO >= 30 and arma == "MACHADO"):
	dano = sucesso+3
	print(dano)
elif(PO >= 50 and arma == "MARRETA"):
	dano = sucesso+5
	print(dano)
else:
	print("PO insuficiente")
	
	
	
	
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
